--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="title_home">스터디모드</string>
     <string name="title_dashboard">과제관리</string>
     <string name="title_notifications">설정</string>
+    <string name="title_additions">과제추가</string>
 </resources>
